about us spacing fixed

--- a/frontend/src/components/AboutUsSections/AboutUsSection2/AboutUsSection2.scss
+++ b/frontend/src/components/AboutUsSections/AboutUsSection2/AboutUsSection2.scss
@@ -10,8 +10,7 @@
     align-items: center;
     display: flex;
     padding: 7% 11%;
-    margin: 0;
-    margin-top: 5%;
+    margin: 5% 0;
   
     .progress-title {
         @extend .dark-gray;
