--- a/frontend/src/components/AboutUsSections/AboutUsSection3/AboutUsSection3.scss
+++ b/frontend/src/components/AboutUsSections/AboutUsSection3/AboutUsSection3.scss
@@ -9,20 +9,23 @@
     flex-direction: column;
     align-items: center;
     display: flex;
-    padding: 0% 11%;
-    margin: 5% 0 0 0;
+    padding: 7% 11%;
+    margin: 0;
   
     .sponsors-header {
       flex-direction: column;
-      justify-content: flex-start;
+      // justify-content: center;
       align-items: center;
       display: flex;
+      text-align: center;
       padding: 0;
       margin: 0;
+      width: 100%;
   
       .sponsors-title {
         @extend .dark-gray;
         @extend .heading2;
+        text-align: center;
         padding: 0;
         margin: 0;
       }
